<resources>
    <string name="app_name">JKOMarket</string>
    <string name="login_or_signup">Login or Signup</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="success">Success</string>
    <string name="login_fail_user_not_exit">User not exist</string>
    <string name="signup_fail_username_exit">User already existing</string>
    <string name="unknown_user">Unknown user</string>
    <string name="title_home">Home</string>
    <string name="title_me">Me</string>
    <string name="listing_title">Listing Title</string>
    <string name="hint_listing_title">Input the listing title</string>
    <string name="listing_description">Description</string>
    <string name="hint_listing_description">Input the description</string>
    <string name="listing_price">Price</string>
    <string name="hint_listing_price">Input the price</string>
    <string name="listing_category">Category</string>
    <string name="confirm">Confirm</string>
</resources>
