<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".me.view.AddListingActivity">

    <LinearLayout
        android:id="@+id/listingInfoGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listing_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/listingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_listing_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listing_description"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/listingDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_listing_price"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listing_price"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/listingPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_listing_price"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listing_category"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/listingCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listingInfoGroup"
        android:text="@string/confirm"
        android:layout_margin="40dp"/>
</RelativeLayout>